add alpine-apache-php5, fix ubuntu-apache-php5 with start CMD

--- a/ubuntu-apache-php5/Dockerfile
+++ b/ubuntu-apache-php5/Dockerfile
@@ -16,4 +16,5 @@ rm -rf /var/lib/apt/lists/* && \
 cd /tmp && curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
 EXPOSE 80
+CMD apachectl -D FOREGROUND
 
