--- a/alpine-apache-php5/Dockerfile
+++ b/alpine-apache-php5/Dockerfile
@@ -24,6 +24,7 @@ RUN apk add --update --no-cache \
     php5-dom \
     php5-pdo \
     php5-zip \
+    php5-mysql \
     php5-mysqli \
     php5-sqlite3 \
     php5-pdo_pgsql \
